--- a/my_board/templates/my_board/view.html
+++ b/my_board/templates/my_board/view.html
@@ -1,11 +1,11 @@
     {% extends 'my_board/base.html' %}    
-    {% block content %}   
+    {% block content %}
     <div class='container'>
       <form action='../create' method='POST'>
         {% csrf_token %}
         <div class="form-group">
           <label for="exampleInputPassword1">작성 날짜</label>
-          <input type="date" class="form-control" id='now_date' name='createDate'>
+          <input type="date" class="form-control" id='now_date' name='createDate' value="{{post.createDate|date:'y-m-d'}}" readonly>
           <script>
             document.getElementById('now_date').valueAsDate = new Date();
           </script>
@@ -13,16 +13,16 @@
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">작성자</label>
-          <input type="text" class="form-control" placeholder="작성자" name='user'>
+          <input type="text" class="form-control" placeholder="작성자" name='user' value='{{post.writer}}' readonly>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">글 제목</label>
-          <input type="text" class="form-control" name='subject'>
+          <input type="text" class="form-control" name='subject' value='{{post.subject}}' readonly>
         </div>
         <div class="form-group">
           <label for="exampleInputFile">게시글</label>
-          <textarea class="form-control" rows=10 name='content'></textarea>
-        <button type="submit" class="btn btn-default">등록</button>
+          <textarea class="form-control" rows=10 name='content' readonly>{{post.content}}</textarea>
+        <!-- <button type="submit" class="btn btn-default">등록</button> -->
       </form>
     </div>
     {% endblock %}
