--- a/my_board/templates/my_board/list.html
+++ b/my_board/templates/my_board/list.html
@@ -1,38 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-
-    {% load static %}
-    <link type='text/css' rel='stylesheet' href='{% static "bootstrap.min.css" %}' />
-    <link type='text/css' rel='stylesheet' href='{% static "bootstrap-theme.min.css" %}' />
-    <link type='text/css' rel='stylesheet' href='{% static "list.css" %}' />
-  </head>
-
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">아주 간단한 게시판</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <div class="navbar-form navbar-right">
-            <button type="submit" class="btn btn-info">Sign in</button>
-            <button type="submit" class="btn btn-success">Sign up</button>
-          </div>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-
-    <hr>
-
-
+   {% extends 'my_board/base.html' %}
+   {% block content %}
     <div class="container">
       <table class='table'>
         <thead>
@@ -56,7 +23,11 @@
             <td> {{forloop.counter}} </td>
             <td> {{row.createDate}} </td>
             <td> {{row.writer}} </td>
-            <td> {{row.subject}} </td>
+            <td>
+             <a href='view/?id={{row.id}}'>
+               {{row.subject}} 
+             </a>
+            </td>
             <td> {{row.content}} </td>
             <td>
               <a href='update/?id={{row.id}}'>
@@ -92,5 +63,4 @@
         <button type="submit" class="btn btn-primary">게시글 작성하기</button>
       </a>
     </div>
-  </body>
-</html>
+    {% endblock %}
