--- a/my_board/templates/my_board/update.html
+++ b/my_board/templates/my_board/update.html
@@ -1,34 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    {% load static %}
-    <link type='text/css' rel='stylesheet' href='{% static "bootstrap.min.css" %}' />
-    <link type='text/css' rel='stylesheet' href='{% static "bootstrap-theme.min.css" %}' />
-    <link type='text/css' rel='stylesheet' href='{% static "list.css" %}' />
-
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">아주 간단한 게시판</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <div class="navbar-form navbar-right">
-            <button type="submit" class="btn btn-info">Sign in</button>
-            <button type="submit" class="btn btn-success">Sign up</button>
-          </div>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-
-    <hr>
-
+    {% extends 'my_board/base.html' %}
+    {% block content %}
     <div class='container'>
       <form action='../modify/' method='POST'>
         {% csrf_token %}
@@ -56,6 +27,4 @@
         
       </form>
     </div>
-  </body>
-
-</html>
+    {% endblock %}
