--- a/my_board/templates/my_board/base.html
+++ b/my_board/templates/my_board/base.html
@@ -21,12 +21,21 @@
           </button>
           <a class="navbar-brand" href="/my_board/">아주 간단한 게시판</a>
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
           <div class="navbar-form navbar-right">
+            {% if user.is_authenticated %}
+            <a href='/accounts/logout/'>
+              <button type="submit" class="btn btn-info">Log out</button>
+            </a>
+            {% else %}
+            <a href='/accounts/login/'>
             <button type="submit" class="btn btn-info">Sign in</button>
+            </a>
             <a href='/accounts/signup/'>
             <button type="submit" class="btn btn-success">Sign up</button>
             </a>
+            {% endif %}
           </div>
         </div><!--/.navbar-collapse -->
       </div>
