--- a/my_board/templates/my_board/view.html
+++ b/my_board/templates/my_board/view.html
@@ -23,6 +23,22 @@
           <label for="exampleInputFile">게시글</label>
           <textarea class="form-control" rows=10 name='content' readonly>{{post.content}}</textarea>
         <!-- <button type="submit" class="btn btn-default">등록</button> -->
+        </div>
+        <!-- 댓글 기능 구현??
+        <div>
+          <label for="exampleInputFile">댓글</label>
+          <tr>
+            <th style='width: 5%'> 번호 </th>
+            <th style='width: 10% '> 작성날짜 </th>
+            <th style='width: 10%'> 작성자 </th>
+            <th> 댓글 </th>
+
+            <th style='width: 5%'> </th>
+            <th style='width: 5%'> </th>
+          </tr>
+          <input type="text" class="form-control" name='reply'>
+          <button type="submit" class="btn btn-default">등록</button>
+        </div>-->
       </form>
     </div>
     {% endblock %}
